Responsive bug on iPhone 7 fixed.

--- a/styles.css
+++ b/styles.css
@@ -282,6 +282,10 @@ header {
 }
 
 @media (max-width: 1200px) {
+  body {
+    overflow-x: hidden;
+  }
+
   header .logo {
       font-size: 1.5rem;
       padding: 0 2vw;
